test/gator/bench/cel/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-limits
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          cpu: "500m"
          memory: "128Mi"
        requests:
          cpu: "250m"
          memory: "64Mi"
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-without-limits
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx:latest
